--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'  # Добавьте версию в начало
+version: '3.8'
 
 services:
   # PostgreSQL
@@ -19,7 +19,7 @@ services:
       timeout: 5s
       retries: 10
       start_period: 15s
-    networks:  # Добавлено
+    networks:
       - app-network
 
   # Auth Service
@@ -29,7 +29,7 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgresql://postgres:ZZZivanchzv2002@postgres:5432/auth_db
-      JWT_SECRET_KEY: your-super-secret-jwt-key-change-this-in-production
+      JWT_SECRET_KEY: super-secret-jwt-key
       JWT_ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
     depends_on:
@@ -37,7 +37,7 @@ services:
         condition: service_healthy
     command: sh -c "sleep 5 && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     restart: unless-stopped
-    networks:  # Добавлено
+    networks:
       - app-network
 
   # Event Service
@@ -55,7 +55,7 @@ services:
         condition: service_started
     command: sh -c "sleep 8 && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     restart: unless-stopped
-    networks:  # Добавлено
+    networks:
       - app-network
 
   # Notification Service
@@ -70,7 +70,7 @@ services:
         condition: service_healthy
     command: sh -c "sleep 5 && uvicorn app.main:app --host 0.0.0.0 --port 8000"
     restart: unless-stopped
-    networks:  # Добавлено
+    networks:
       - app-network
 
   # Web Client
@@ -84,10 +84,10 @@ services:
     depends_on:
       - auth-service
       - event-service
-    networks:  # Добавлено
+    networks:
       - app-network
 
-  # PgAdmin (исправлено - теперь отдельный сервис)
+  # PgAdmin
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: pgadmin
@@ -103,13 +103,13 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: unless-stopped
-    networks:  # Добавлено
+    networks:
       - app-network
 
-networks:  # Добавьте этот раздел
+networks:
   app-network:
     driver: bridge
 
 volumes:
   postgres_data:
-  pgadmin-data:  # Добавьте это
+  pgadmin-data:
